done View. next step - DI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="your_mail">Ваша почта</string>
     <string name="your_comment">Ваш комментарий</string>
     <string name="order">Отправить</string>
+    <string name="contacts">Контакты</string>
 
 
 
